# gpu_programmierung

./: CMakeLists.txt
a1/: CMakeLists.txt
a1/inc/: a1.hpp
a1/skeleton/: a1.cpp  main.cpp
a2/: CMakeLists.txt
a2/inc/: a2.hpp  cuda_util.h
a2/skeleton/: a2.cu  main.cpp
project/: CMakeLists.txt  Präsentation FFD ANN mit Cuda - GPU Programmierung.pptx  README.md
project/inc/: cuda_stuff.cu  cuda_utils.cu  layer.hpp  matrix.hpp  neural_network.hpp  neuron.hpp  util.hpp
project/report/: report.tex
project/src/: main.cpp
